--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "requirejs": "^2.3.2",
     "through2": "^2.0.1",
     "tslint": "^3.11.0",
-    "typescript": "^2.1.0-dev.20160928",
+    "typescript": "^2.0.2",
     "typings": "^1.3.0",
     "uglify-js": "^2.6.3",
     "vinyl-fs": "^2.4.3"
